# chaty-backend

./: .dockerignore  .gitignore  Cargo.toml  ENDPOINTS.md  Makefile  chaty.dev.yaml  chaty.local.yaml  docker-compose.yaml  rustfmt.toml
.sqlx/: query-322ed97a80c05b4386981223dafbfb1660264bb5a9c73f936ccdc1be1c4c651e.json  query-6afadee1b95d0027142e8d5b71fc727aa56a01a7412404325e2f3387de230d70.json  query-887c07359842c9530a92e59f525996d7aba572a942983b4e5a98f0b8a6503bc4.json
config/: envoy.yml  grafana-datasources.yaml  hydra.yml  loki-config.yaml  otel-collector-config.yaml  prometheus-rules.yaml  prometheus.yaml  promtail-config.yaml
config/grafana/dashboards/: jaeger.json  loki.json
crates/api/: Cargo.toml
crates/api/src/: lib.rs  main.rs
crates/api/src/controller/: audit.rs  mod.rs  router.rs
crates/api/src/controller/groups/: groups_create.rs  groups_list.rs  mod.rs
crates/api/src/controller/search/: mod.rs  search_usernames.rs
crates/api/src/controller/users/: create.rs  mod.rs  users_create.rs  users_email_confirmation.rs  users_forgot_password.rs  users_login.rs  users_reset_password.rs
crates/api/src/models/: mod.rs
crates/api/src/models/groups/: groups_create.rs  mod.rs
crates/api/src/models/users/: mod.rs  users_create.rs  users_forgot_password.rs  users_login.rs
crates/api/src/server/: broker.rs  email.rs  mod.rs  observability.rs
crates/api/src/worker/: mod.rs  users_create.rs  users_forgot_password.rs
crates/api/src/worker/templates/: email_confirmation.html  email_confirmation.txt  password_reset.html  password_reset.txt
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs  main.rs
crates/auth/src/controller/: hydra.rs  metrics.rs  mod.rs  otel.rs  redis.rs  response.rs  router.rs  routes.rs  token.rs  user_cache.rs
crates/auth/src/models/: network.rs
crates/auth/src/server/: init.rs  metrics.rs  mod.rs
crates/auth/src/utils/: network.rs
crates/core/config/: Cargo.toml
crates/core/config/src/: lib.rs
crates/core/database/: Cargo.toml
crates/core/database/src/: lib.rs
crates/core/database/src/drivers/: mod.rs  postgres.rs  reference.rs  reference_no_sql.rs  reference_sql.rs  scylladb.rs
crates/core/database/src/models/: mod.rs
crates/core/database/src/models/channels/: mod.rs  models.rs  ops.rs
crates/core/database/src/models/channels/ops/: reference_no_sql.rs  scylladb.rs
crates/core/database/src/models/files/: models.rs
crates/core/database/src/models/helpers/: ops.rs
crates/core/database/src/models/helpers/ops/: reference_no_sql.rs  scylladb.rs  shared.rs
crates/core/database/src/models/serve_members/: mod.rs  ops.rs
crates/core/database/src/models/serve_members/ops/: reference_no_sql.rs  scylladb.rs
crates/core/database/src/models/servers/: ops.rs
crates/core/database/src/models/servers/ops/: reference_no_sql.rs  scylladb.rs
crates/core/database/src/models/users/: models.rs  ops.rs
crates/core/database/src/models/users/ops/: postgres.rs  reference.rs  reference_sql.rs  scylladb.rs
crates/core/database/src/utils/: funcs.rs  mod.rs  permissions.rs
crates/core/permission/: Cargo.toml
crates/core/permission/src/: channels.rs  lib.rs  permission_query_impl.rs  permission_query_trait.rs  permission_value.rs  servers.rs  users.rs
crates/core/result/: Cargo.toml
crates/core/result/src/: context.rs  errors.rs  lib.rs  middleware.rs  translate.rs
crates/core/result/src/models/: audit.rs  errors.rs  mod.rs  network.rs
crates/core/utils/: Cargo.toml
crates/core/utils/src/: time.rs
crates/search-worker/: Cargo.toml
crates/search-worker/src/: lib.rs  main.rs
crates/search-worker/src/controller/: commit_coordinator.rs  consumer_shutdown.rs  mod.rs  shutdown.rs  task_poller.rs  usernames_consumer.rs  usernames_message_processor.rs  usernames_task_processor.rs
crates/search-worker/src/models/: cdc.rs  mod.rs  tasks.rs
crates/search-worker/src/server/: mod.rs  observability.rs
i18n/: en.json
migrations/nosql/: 000001_create_user_status_type.down.cql  000001_create_user_status_type.up.cql  000002_create_user_profile_type.down.cql  000002_create_user_profile_type.up.cql  000003_create_relationship_type.down.cql  000003_create_relationship_type.up.cql  000004_create_role_type.down.cql  000004_create_role_type.up.cql  000005_create_permission_override_type.down.cql  000005_create_permission_override_type.up.cql  000006_create_attachment_type.down.cql  000006_create_attachment_type.up.cql  000007_create_system_messages_type.down.cql  000007_create_system_messages_type.up.cql  000008_create_category_type.down.cql  000008_create_category_type.up.cql  000009_create_file_type.up.cql  000010_create_override_field_type.down.cql  000010_create_override_field_type.up.cql  000011_create_channel_group_type.down.cql  000011_create_channel_group_type.up.cql  000012_create_channel_saved_messages_type.down.cql  000012_create_channel_saved_messages_type.up.cql  000013_create_channel_text_type.down.cql  000013_create_channel_text_type.up.cql  000014_create_channel_direct_message_type.down.cql  000014_create_channel_direct_message_type.up.cql  000015_create_channels_table.down.cql  000015_create_channels_table.up.cql  000016_create_channels_by_user_table.down.cql  000016_create_channels_by_user_table.up.cql  000017_create_message_webhook_type.down.cql  000017_create_message_webhook_type.up.cql  000018_create_message_system_text_type.down.cql  000018_create_message_system_text_type.up.cql  000019_create_message_system_user_added_type.down.cql  000019_create_message_system_user_added_type.up.cql  000020_create_message_system_user_remove_type.down.cql  000020_create_message_system_user_remove_type.up.cql  000021_create_message_system_user_joined_type.down.cql  (+63 more)
migrations/sql/: 000001_create_users_table.up.sql  000002_create_tokens_table.up.sql  000003_enable_cdc_users.down.sql  000003_enable_cdc_users.up.sql
scripts/: init_broker.sh  init_database.sh  start.sh
scripts/seeder/: main.py
scripts/seeder/requirements/: base.txt
scripts/seeder/src/models/: config.py  settings.py
scripts/seeder/src/sql/: db.py  (+2 more)
(+2 files in other folders)
