[package]
name = "chaty-api"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Ahmad Khatib <ahmadkhatib923@gmail.com>"]
description = "Chaty Backend: Api implementation (grpc)"

[dependencies]
chaty-database = { path = "../core/database" }
chaty-config = { version = "0.1.3", path = "../core/config" }
chaty-utils = { version = "0.1.3", path = "../core/utils" }
chaty-result = { version = "0.1.3", path = "../core/result", features = [
  "audit",
] }

chaty-proto = ">=0.0.1, <1.0"
tokio = { version = "1.48.0", features = ["full"] }
tonic = { version = "0.13.1" }
redpanda = "0.5.0"
async-trait = "0.1.89"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.5.2", features = ["util"] }
validator = "0.20.0"

serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }

prometheus = "0.13"
opentelemetry = { version = "0.21", features = ["trace"] }
opentelemetry-prometheus = "0.14"
opentelemetry-jaeger = "0.20"

regex = "1.10"
once_cell = "1.20"
argon2 = "0.5"
ulid = "1.1"
rand = "0.8"
rdkafka = { version = "0.38.0", features = ["tokio"] }
tera = "1.20.1"
tokio-stream = "0.1.17"
