[package]
name = "chaty-api"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Ahmad Khatib <ahmadkhatib923@gmail.com>"]
description = "Chaty Backend: Api implementation (grpc)"

[dependencies]
chaty-database = { path = "../core/database" }
chaty-config = { version = "0.1.3", path = "../core/config" }
chaty-utils = { version = "0.1.3", path = "../core/utils" }
chaty-result = { version = "0.1.3", path = "../core/result", features = [
  "audit",
] }

chaty-proto = ">=0.0.1, <1.0"
rdkafka = { version = "0.38.0", features = ["tokio"] }
tokio = { version = "1.48.0", features = ["full"] }
tonic = { version = "0.13.1" }
tower = { version = "0.5.2", features = ["util"] }
tokio-stream = "0.1.17"
redpanda = "0.5.0"
async-trait = "0.1.89"
tera = "1.20.1"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
validator = "0.20.0"
lettre = { version = "0.11.19", features = ["tokio1-native-tls", "hostname"] }
reqwest = { version = "0.12", features = ["json"] }

serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }

prometheus = "0.14"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["metrics"] }
opentelemetry-prometheus = "0.31"

hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

regex = "1.10"
once_cell = "1.20"
argon2 = "0.5"
ulid = "1.1"
rand = "0.8"
urlencoding = "2.1.3"
