[package]
name = "chaty-search-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
chaty-database = { path = "../core/database" }
chaty-config = { version = "0.1.3", path = "../core/config" }
chaty-result = { version = "0.1.3", path = "../core/result" }

reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.48.0", features = ["full"] }
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

prometheus = "0.14"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["metrics"] }
opentelemetry-prometheus = "0.31"

serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }

tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

