[package]
name = "chaty-config"
version = "0.1.3"
edition = "2024"
license = "MIT"
authors = ["Ahmad Khatib <ahmadkhatib923@gmail.com>"]
description = "Chaty Backend: Configuration"

[dependencies]
cached = { version = "0.56.0", features = ["async"] }
futures-locks = "0.7.1"
once_cell = "1.21.3"

sentry = { version = "0.46.0", optional = true }
sentry-anyhow = { version = "0.46.0", optional = true }

serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
sentry = ["dep:sentry"]
sentry-anyhow = ["dep:sentry-anyhow"]
anyhow = ["dep:sentry-anyhow"]
default = ["sentry"]
