[package]
name = "chaty-database"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Ahmad Khatib <ahmadkhatib923@gmail.com>"]
description = "Chaty Backend: Database implementation"

[dependencies]
chaty-config = { version = "0.1.3", path = "../config" }
chaty-utils = { version = "0.1.3", path = "../utils" }
chaty-result = { version = "0.1.3", path = "../result" }

chaty-proto = ">=0.0.1, <1.0"

async-trait = "0.1.89"
tonic = { version = "0.13.1" }
tokio = { version = "1.48.0", features = ["full"] }

## databse
scylla = { version = "1.4.1", optional = true }
sqlx = { version = "0.8.6", optional = true, features = [
  "postgres",
  "runtime-tokio",
  "json",
  "bigdecimal",
] }

serde = { version = "1.0.219", features = ["derive"] }

[features]
scylladb = ["dep:scylla"]
postgres = ["dep:sqlx"]
# voice = ["livekit-api", "livekit-protocol", "livekit-runtime"]
default = ["scylladb", "postgres"]
