[package]
name = "chaty-permission"
version = "0.1.3"
edition = "2024"
license = "MIT"
authors = ["Ahmad Khatib <ahmadkhatib923@gmail.com>"]
description = "Chaty Backend: Permission logic and helpers"

[features]
serde = ["dep:serde"]

[dependencies]
chaty-proto = ">=0.0.1, <1.0"

async-trait = "0.1.89"
once_cell = "1.21.3"

serde = { version = "1", features = ["derive"], optional = true }
